--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=ZwG0EyVyVBzYbHWst0xcpZzkEfkeTGfo
 
 DB_HOST=localhost
-DB_DATABASE=museum
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=star2008
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
